--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "generate-metadata": "node scripts/generate-metadata.js",
+    "build": "pnpm generate-metadata && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
