Add SPA fallback setup with 404.html and improve Home page content
- Add `_redirects` file for SPA support with static hosting.
- Introduce `post-build.js` script to copy `index.html` to `404.html` for fallback behavior.
- Update `package.json` build process to include the post-build script.
- Enhance Home page with Japanese feature descriptions for better localization.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "generate-metadata": "node scripts/generate-metadata.js",
-    "build": "pnpm generate-metadata && tsc -b && vite build",
+    "post-build": "node scripts/post-build.js",
+    "build": "pnpm generate-metadata && tsc -b && vite build && pnpm post-build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
